| Summary: | ASTERISK-27129: ast_waitfordigit_full: add support for filtering DTMF keys which can break the wait. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-07-12 18:17:15 | Date Closed: | 2017-07-21 12:00:37 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This adds support for waiting up to a timeout for specific DTMF keys to be pressed.
My own use case is dialplan run for a queued caller while they're waiting for an agent to answer but the caller has the ability to exit the queue and leave a message by pressing 1. If you intend to play music on hold for 60 seconds it should not end early if the user presses 2. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-07-12 18:17:17.068-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||